--- a/pgwidgets_js/static/css/TextSource.css
+++ b/pgwidgets_js/static/css/TextSource.css
@@ -1,6 +1,8 @@
 /* TextSource widget */
 
 .textsource-widget {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
